--- a/src/views/clinic-panel/pages/panel/upload-image.ejs
+++ b/src/views/clinic-panel/pages/panel/upload-image.ejs
@@ -51,11 +51,12 @@
             </div>
           </form>
         </div>
+        
         <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
           <div class="tm-box-info">
             <div class="tm-box-top">
-              <div class="input-group">
-                <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
+              <div class="col d-flex align-items-start">
+                <div class="me-1"><img src="../user/img/clinic/attention.png" alt="Attention Icon" /></div>
                 <div class="tm-box-title">Merkezimin fotoğrafları kalitesiz ne yapmalıyım?</div>
               </div>
             </div>
