--- a/src/views/clinic-panel/pages/panel/message-options.ejs
+++ b/src/views/clinic-panel/pages/panel/message-options.ejs
@@ -2,28 +2,28 @@
   <div class="content-wrapper">
     <div id="section-i" class="tm-p">
       <div class="row">
-        <div class="tm-section-title">Kabul Edilen Ödeme Şekilleri</div>
+        <div class="tm-section-title">Kabul EDİLEN Ödeme ŞEKİLLERİ</div>
         <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
           <form class="tm-form-wide">
             <div class="form-box">
               <div class="title">Bildirimler</div>
               <div class="text">Rezervasyonlarınız için kullandığın e-posta adresine göndereceğimiz yeni mesaj bildirimlerini kontrol edin.</div>
               <div class="title">E-Posta Tercihleri</div>
-              <div class="form-group not-border checkbox custom">
+              <div class="form-group not-border checkbox">
                 <div class="tm-font-semibold">Bir hasta tarafından mesaj alındığında e-posta gönder</div>
                 <label class="tm-switch tm-margin-b-0">
                   <input type="checkbox" checked />
                   <span class="tm-slider tm-round"></span>
                 </label>
               </div>
-              <div class="form-group not-border checkbox custom">
+              <div class="form-group not-border checkbox mt-1">
                 <div class="tm-font-semibold">Bir hasta tarafından değerlendirme yorumu yapıldığında e-posta gönder</div>
                 <label class="tm-switch tm-margin-b-0">
                   <input type="checkbox" checked />
                   <span class="tm-slider tm-round"></span>
                 </label>
               </div>
-              <div class="form-group not-border checkbox custom">
+              <div class="form-group not-border checkbox mt-1">
                 <div class="tm-font-semibold">Yaklaşan bir randevuyu hatırlatmak amacı ile e-posta gönder</div>
                 <label class="tm-switch tm-margin-b-0">
                   <input type="checkbox" checked />
