--- a/src/views/clinic-panel/pages/panel/properties-and-services.ejs
+++ b/src/views/clinic-panel/pages/panel/properties-and-services.ejs
@@ -2,8 +2,8 @@
   <div class="content-wrapper">
     <div id="section-i" class="tm-p">
       <div class="row">
-        <div class="tm-section-title">Özellikler ve Hizmetler</div>
-        <div class="col-sm-12 col-md-12 col-lg-7 col-xl-8">
+        <div class="tm-section-title">Özellİkler ve Hİzmetler</div>
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 mb-5">
           <form class="tm-form-wide">
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -35,7 +35,7 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <div class="title">Seans İçi Hizmetler</div>
+                  <div class="title mt-4">Seans İçi Hizmetler</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> Seans İçi Yiyecek Sunumu </label>
@@ -54,7 +54,7 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <div class="title">Tesis İçi İmkanlar</div>
+                  <div class="title mt-4">Tesis İçi İmkanlar</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> Tekerlekli Sandalye Kullanımına Uygun </label>
@@ -108,7 +108,7 @@
                     <label class="form-check-label" for="flexCheckChecked"> Sedyeli Hasta Servisi </label>
                   </div>
                 </div>
-                <div class="form-box">
+                <div class="form-box mt-4">
                   <div class="title">Merkez Binası Tipi</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
@@ -124,7 +124,7 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <div class="title">Konuşulan Diller (Personel)</div>
+                  <div class="title mt-4">Konuşulan Diller (Personel)</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> Türkçe </label>
@@ -152,7 +152,7 @@
               </div>
               <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                 <div class="form-box">
-                  <div class="title">Diyaliz Merkezleri</div>
+                  <div class="title mt-4">Diyaliz Merkezleri</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> Özel Diyaliz Merkezi </label>
@@ -167,7 +167,7 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <div class="title">Sigorta Durumu</div>
+                  <div class="title mt-4">Sigorta Durumu</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> SSK Anlaşmalı </label>
@@ -178,7 +178,7 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <div class="title">Personel Durumu</div>
+                  <div class="title mt-4">Personel Durumu</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> Diyetisyen </label>
@@ -197,7 +197,7 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <div class="title">Diyaliz Cihazı Markaları</div>
+                  <div class="title mt-4">Diyaliz Cihazı Markaları</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> Fresenius </label>
@@ -232,7 +232,7 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <div class="title">Tercüman Hizmeti</div>
+                  <div class="title mt-4">Tercüman Hizmeti</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> Ücretli </label>
@@ -243,7 +243,7 @@
                   </div>
                 </div>
                 <div class="form-box">
-                  <div class="title">Ek Hizmetler</div>
+                  <div class="title mt-4">Ek Hizmetler</div>
                   <div class="form-group not-border checkbox">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                     <label class="form-check-label selected" for="flexCheckChecked"> Ücretsiz Havaalanı Transferi </label>
@@ -260,7 +260,7 @@
             </div>
           </form>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
           <div class="tm-box-info">
             <div class="tm-box-top">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
