--- a/src/views/clinic-panel/pages/panel/visibility.ejs
+++ b/src/views/clinic-panel/pages/panel/visibility.ejs
@@ -2,11 +2,11 @@
   <div class="content-wrapper">
     <div id="section-i" class="tm-p">
       <div class="row">
-        <div class="tm-section-title">Görünürlüğünüzü Arttırın</div>
+        <div class="tm-section-title mb-1">Görünürlüğünüzü Arttırın</div>
         <div class="admin-inner-text">Sadece 3 adımda merkezinizin boş diyaliz cihazlarını doldurabilir ve hastalarınızın ilgilerini çekebilirsiniz.</div>
         <!--=====Hangi tarihlerde görünürlüğünüzü arttırmak istersiniz?=====-->
-        <div class="col-sm-12 col-md-12 col-lg-7 col-xl-8">
-          <div class="tm-section-title blue">Hangi tarihlerde görünürlüğünüzü arttırmak istersiniz?</div>
+        <div class="col-sm-12 col-md-12 col-lg-7 col-xl-8 visibilty">
+          <div class="tm-section-title blue mb-0 mt-5">Hangi tarihlerde görünürlüğünüzü arttırmak İstersiniz?</div>
           <div class="admin-inner-text">Sadece 3 adımda merkezinizin boş diyaliz cihazlarını doldurabilir ve hastalarınızın ilgilerini çekebilirsiniz.</div>
           <div class="dropdown-custom">
             <div class="form-group">
@@ -28,7 +28,7 @@
               <img src="../clinic-panel/images/icons/down-admin.png" alt="Down Admin Icon" class="dropdown-down" />
             </div>
           </div>
-          <div class="tm-section-title blue">Hastalarınızın dikkatini çekmek istediğiniz lokasyonlar neler?</div>
+          <div class="tm-section-title blue mb-0 mt-5">Hastalarınızın dikkatini çekmek istediğiniz lokasyonlar neler?</div>
           <div class="admin-inner-text">Belirli lokasyonlarda ki hastaların ilgisini çekin ya da görünürlüğünüzü herkes için arttırın.</div>
           <!--=====Hastalarınızın dikkatini çekmek istediğiniz lokasyonlar neler?=====-->
           <div class="form-group d-flex flex-row radio same-row">
@@ -90,22 +90,21 @@
               </div>
             </div>
           </div>
-          <div class="tm-section-title blue">Fiyatlandırmalar</div>
+          <div class="tm-section-title blue mb-0 mt-5">Fiyatlandırmalar</div>
           <div class="admin-inner-text">Seçimlerinize göre fiyatlandırma aşağıda yer almaktadır. Ulaşabileceğiniz hasta sayıları yalnızca öngörüdür.</div>
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-9 col-xl-9">
               <div class="tm-form-wide">
                 <div class="form-group radio small">
-                  <label class="container"
-                    >Belirli ülke/bölge
+                  <label class="container">Belirli ülke/bölge
                     <input type="radio" checked="checked" name="radio2" />
                     <span class="checkmark"></span>
                   </label>
                 </div>
-                <div class="admin-inner-text">Temmuz-Ağustos aylarında, Avrupa bölgesinde geçerli olacaktır.</div>
+                <div class="admin-inner-text mb-2">Temmuz-Ağustos aylarında, Avrupa bölgesinde geçerli olacaktır.</div>
                 <div class="tm-space-between">
                   <div>
-                    <div class="tm-font-semibold">Merkezinizin Tahmini Görüntülenme Sayısı</div>
+                    <div class="tm-font-semibold mb-1">Merkezinizin Tahmini Görüntülenme Sayısı</div>
                     <div class="tm-color-second tm-font-semibold">250-500 Görüntülenme</div>
                   </div>
                   <div class="token-number">99 Dialysis Token</div>
@@ -122,8 +121,10 @@
         <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4">
           <div class="tm-box-info">
             <div class="tm-box-top">
-              <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
+              <div class="col d-flex align-items-start">
+                <div class="me-1"><img src="../user/img/clinic/attention.png" alt="Attention Icon" /></div>
               <div class="tm-box-title">Dialysing.com öne çıkma ücretleri</div>
+            </div>
             </div>
             <div class="tm-box-bottom">
               <div>Kullanıcıların arattığı merkez listelerinde, seçtiğiniz bölgeye göre listede en başa çıkmak için fiyat listesi aşağıdadır.</div>
