--- a/src/views/clinic-panel/pages/panel/what-closest.ejs
+++ b/src/views/clinic-panel/pages/panel/what-closest.ejs
@@ -202,7 +202,7 @@
             </div>
           </form>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-4">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-4 mt-5">
           <div class="tm-box-info">
             <div class="tm-box-top">
               <div class="col d-flex align-items-start">
