--- a/public/user/css/panel.css
+++ b/public/user/css/panel.css
@@ -271,3 +271,7 @@ input#others.form-control {
 .token-number {
   font-size: 15px !important;
 }
+.promotion-dates {
+  font-family: "Lato", sans-serif;
+  font-size: 13px !important; 
+}
