modified payment options design

--- a/src/views/clinic-panel/pages/panel/payment-options.ejs
+++ b/src/views/clinic-panel/pages/panel/payment-options.ejs
@@ -8,7 +8,8 @@
             <div class="form-box">
               <div class="title">Yurtdışından Gelen Tatil Rezervasyonları</div>
               <div class="form-group not-border checkbox">
-                <div class="tm-font-semibold">Merkezinizi yurtdışından gelecek tatil diyalizi rezervasyon taleplerine açmak ister misiniz?</div>
+                <div class="tm-font-semibold">Merkezinizi yurtdışından gelecek tatil diyalizi rezervasyon taleplerine
+                  açmak ister misiniz?</div>
                 <label class="tm-switch tm-margin-b-0">
                   <input type="checkbox" checked />
                   <span class="tm-slider tm-round"></span>
@@ -73,7 +74,8 @@
               <div class="title">Yurtdışı Hastaları İçin</div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Yurtdışı Sigortasından Direk Tahsilat </label>
+                <label class="form-check-label selected" for="flexCheckChecked"> Yurtdışı Sigortasından Direk Tahsilat
+                </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
@@ -93,16 +95,25 @@
             </div>
           </form>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4">
+        <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4 mt-5">
           <div class="tm-box-info">
             <div class="tm-box-top">
-              <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
-              <div class="tm-box-title">Yurtdışından Gelen Tatil Rezervasyonları İçin</div>
+              <div class="col d-flex align-items-start">
+                <div class="me-1">
+                  <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
+                </div>
+                <div class="tm-box-title">Yurtdışından Gelen Tatil Rezervasyonları İçin</div>
+              </div>
             </div>
             <div class="tm-box-bottom">
               <div>
-                Dialysing.com merkezimize yurtdışından gelecek olan tatil diyalizi rezervasyonlarından tarafınızca kabul edilerek gerçekleştirilecek olan her bir tatil diyaliz seansı için merkez sözleşmenizde yer alan Hizmet Bedeli faturalandırma tahsilatı yapma hakkına sahiptir. Sadece rezervasyonu yapılan tedavinin merkezce gerçekleştirilmesi halinde rezervasyon hizmet bedeli ödenir. Hizmet bedeli dışında dialysing.com’a herhangi bir komisyon ödemesi yapmazsınız; bu bedel dışında.. 2021 yılı
-                yurtdışı tatil diyalizi rezervasyonu hizmet bedeli 9 Euro’dur ve ilk 3 rezervasyonda hizmet bedeli yoktur. Dialysing.com'a bunun dışında ayırca herhangi bir komisyon veya masraf ödemesi yapmazsınız .
+                Dialysing.com merkezimize yurtdışından gelecek olan tatil diyalizi rezervasyonlarından tarafınızca kabul
+                edilerek gerçekleştirilecek olan her bir tatil diyaliz seansı için merkez sözleşmenizde yer alan Hizmet
+                Bedeli faturalandırma tahsilatı yapma hakkına sahiptir. Sadece rezervasyonu yapılan tedavinin merkezce
+                gerçekleştirilmesi halinde rezervasyon hizmet bedeli ödenir. Hizmet bedeli dışında dialysing.com’a
+                herhangi bir komisyon ödemesi yapmazsınız; bu bedel dışında.. 2021 yılı
+                yurtdışı tatil diyalizi rezervasyonu hizmet bedeli 9 Euro’dur ve ilk 3 rezervasyonda hizmet bedeli
+                yoktur. Dialysing.com'a bunun dışında ayırca herhangi bir komisyon veya masraf ödemesi yapmazsınız .
               </div>
             </div>
           </div>
@@ -116,7 +127,8 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div class="suggestion-button">
-            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png" alt="Icon Suggestion" />Öneriler</button>
+            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png"
+                alt="Icon Suggestion" />Öneriler</button>
           </div>
         </div>
       </div>
@@ -124,5 +136,5 @@
   </div>
 
   <%- include("../../partials/footer") %>
-  <!-- partial -->
+    <!-- partial -->
 </div>
