--- a/public/user/css/panel.css
+++ b/public/user/css/panel.css
@@ -127,7 +127,7 @@
 .tm-section-title {
   font-family: "Lato", sans-serif;
   font-size: 20px;
-  text-transform: uppercase ;
+  text-transform: uppercase;
   color: #28353e;
   margin-bottom: 30px;
   margin-top: 10px;
@@ -137,15 +137,15 @@
   font-family: "Lato", sans-serif;
 }
 .btn-forth {
-  font-family: "Lato", sans-serif; 
+  font-family: "Lato", sans-serif;
 }
 .btn-second {
-  font-family: "Lato", sans-serif; 
+  font-family: "Lato", sans-serif;
 }
 .title {
   font-family: "Lato", sans-serif;
   font-size: 18px;
-  font-weight: bold; 
+  font-weight: bold;
 }
 .text {
   font-family: "Montserrat", sans-serif;
@@ -165,91 +165,91 @@
 .admin-inner-text {
   font-family: "Lato", sans-serif;
   font-size: 15px;
-  font-weight: bold; 
-  line-height: 1.5rem; 
+  font-weight: bold;
+  line-height: 1.5rem;
 }
 .clinic-form-title {
   font-family: "Lato", sans-serif;
   font-weight: 700;
-  font-size: 17px; 
+  font-size: 17px;
 }
 .tm-form-wide label {
   font-family: "Lato", sans-serif;
-  font-weight: 700; 
+  font-weight: 700;
   margin-top: 10px;
   margin-bottom: 3px;
 }
 input#name-surname.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#distance.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#name-surname2.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#distance2.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#name-surname3.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#distance3.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#name-surname4.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#distance4.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#name-surname5.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#distance5.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#name-surname6.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#distance6.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#name-surname7.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#distance7.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 input#others.form-control {
-  font-size: 12px; 
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
 }
 .clinic-center-text {
   font-size: 12px;
   font-family: "Montserrat", sans-serif;
   margin-top: 20px;
-} 
+}
 .tm-process .tm-process-text {
-  font-size: 13px; 
+  font-size: 13px;
   line-height: 1.2rem;
 }
 .clinic-points {
-  font-size: 13px; 
+  font-size: 13px;
   line-height: 1.2rem;
   font-family: "Montserrat", sans-serif;
 }
@@ -261,7 +261,7 @@ input#others.form-control {
 .visibilty .tm-section-title {
   text-transform: capitalize;
 }
-.dropdown-custom select { 
+.dropdown-custom select {
   width: 42% !important;
   padding: 8px 5px 8px 20px !important;
   margin: 0 !important;
@@ -273,5 +273,10 @@ input#others.form-control {
 }
 .promotion-dates {
   font-family: "Lato", sans-serif;
-  font-size: 13px !important; 
+  font-size: 13px !important;
+}
+input#explanation1.form-control {
+  padding: 8px 8px 8px 20px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
 }
