--- a/src/views/clinic-panel/pages/panel/answer-waiting-rezervations.ejs
+++ b/src/views/clinic-panel/pages/panel/answer-waiting-rezervations.ejs
@@ -7,88 +7,117 @@
           <form class="tm-form-wide accordion">
             <div class="tm-steps">
               <ul class="flex-column flex-md-row d-flex tabbar">
-                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/answer-waiting-rezervations">Cevap Bekleyen Rezervasyonlar</a>
-                <a class="flex-sm-fill text-md-center nav-link mb-2 active" aria-current="page" href="/panel/oncoming-rezervations"
-                  >Yaklaşan Rezervasyonlar
-                  <div class="tm-s-step active completed"></div
-                ></a>
-                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/completed-rezervations">Tamamlanan Rezervasyonlar</a>
-                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/canceled-rezervations">İptal Olan Rezervasyonlar</a>
+                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/answer-waiting-rezervations">Cevap
+                  Bekleyen Rezervasyonlar</a>
+                <a class="flex-sm-fill text-md-center nav-link mb-2 active" aria-current="page"
+                  href="/panel/oncoming-rezervations">Yaklaşan Rezervasyonlar
+                  <div class="tm-s-step active completed"></div>
+                </a>
+                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/completed-rezervations">Tamamlanan
+                  Rezervasyonlar</a>
+                <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/canceled-rezervations">İptal Olan
+                  Rezervasyonlar</a>
               </ul>
             </div>
 
-            <% appointments.forEach(appointment => { %>
-            <div class="accordion accordion-flush" id="rezervationMessage1">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    <div class="tm-space-between tm-width-100">
-                      <div>
-                        <div class="admin-box-title"><%- appointment.patientNameSurname %></div>
-                        <div class="tm-space-between tm-flex-align-baseline mobile">
-                          <div class="admin-box-text"><%- appointment.treatmentMethod %></div>
-                          <div class="admin-box-text">
-                            <table class="mobile-table">
-                              <tr>
-                                <th><span><%- appointment.email %> </span></th>
-                                <th><span><%- appointment.phone %> </span></th>
-                              </tr>
-                              <tr>
-                                <td><span><%- appointment.address.addressDetailText %></span></td>
-                                <td><span><%- appointment.insurance %></span></td>
-                              </tr>
-                            </table>
+            <% appointments.forEach(appointment=> { %>
+              <div class="accordion accordion-flush" id="rezervationMessage1">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      <div class="tm-space-between tm-width-100">
+                        <div>
+                          <div class="admin-box-title">
+                            <%- appointment.patientNameSurname %>
                           </div>
-                        </div>
-                      </div>
-                      <div class="right">
-                        <div class="admin-box-text"><%- appointment.checkInDate.toJSON().slice(0,10) %></div>
-                        <div class="admin-box-text"><%- appointment.situation %></div>
-                      </div>
-                    </div>
-                  </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#rezervationMessage1">
-                  <div class="accordion-body">
-                    <div class="form-group">
-                      <label for="center-about">Özel Notlar</label>
-                      <textarea class="form-control" id="center-about" rows="3" placeholder="<%- appointment.note  %>" disabled></textarea>
-                    </div>
-                    <div class="tm-space-between">
-                      <!-- <div class="warning left">Tatil Diyalizi Rezervasyonudur.</div> -->
-                      <div class="buttons tm-space-between">
-                        <a href="/panel/accept-appointment/<%- appointment._id %>" class="btn btn-second">Randevuyu Kabul Et</a>
-                        <button type="button" class="btn btn-second" data-bs-toggle="modal" data-bs-target="#exampleModal">Değişiklik Talep Et</button>
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                          <div class="modal-dialog">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Hastanıza önerdiğiniz değişiklikleri belirtebilirsiniz.</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                              </div>
-                              <div class="modal-body">
-                                <p>Önerilerinizi Yazın</p>
-                                <div class="form-floating">
-                                  <textarea class="form-control" placeholder="Justo, elementum varius arcu, massa pellentesque nibh elementum accumsan eros, tincidunt lorem porttitor phasellus interdum" id="floatingTextarea2" style="height: 100px"></textarea>
-                                </div>
-                              </div>
-                              <div class="d-grid gap-2 mb-5 p-3">
-                                <button type="button" class="btn btn-second" data-bs-dismiss="modal">Değişiklikleri Talep Et</button>
-                              </div>
+                          <div class="tm-space-between tm-flex-align-baseline mobile">
+                            <div class="admin-box-text">
+                              <%- appointment.treatmentMethod %>
+                            </div>
+                            <div class="admin-box-text">
+                              <table class="mobile-table">
+                                <tr>
+                                  <th><span>
+                                      <%- appointment.email %>
+                                    </span></th>
+                                  <th><span>
+                                      <%- appointment.phone %>
+                                    </span></th>
+                                </tr>
+                                <tr>
+                                  <td><span>
+                                      <%- appointment.address.addressDetailText %>
+                                    </span></td>
+                                  <td><span>
+                                      <%- appointment.insurance %>
+                                    </span></td>
+                                </tr>
+                              </table>
                             </div>
                           </div>
                         </div>
-                        <button class="btn btn-forth">İptal Et</button>
+                        <div class="right">
+                          <div class="admin-box-text">
+                            <%- appointment.checkInDate.toJSON().slice(0,10) %>
+                          </div>
+                          <div class="admin-box-text">
+                            <%- appointment.situation %>
+                          </div>
+                        </div>
+                      </div>
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                    data-bs-parent="#rezervationMessage1">
+                    <div class="accordion-body">
+                      <div class="form-group">
+                        <label for="center-about">Özel Notlar</label>
+                        <textarea class="form-control" id="center-about" rows="3" placeholder="<%- appointment.note  %>"
+                          disabled></textarea>
+                      </div>
+                      <div class="tm-space-between">
+                        <!-- <div class="warning left">Tatil Diyalizi Rezervasyonudur.</div> -->
+                        <div class="buttons tm-space-between">
+                          <a href="/panel/accept-appointment/<%- appointment._id %>" class="btn btn-second">Randevuyu
+                            Kabul Et</a>
+                          <button type="button" class="btn btn-second" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">Değişiklik Talep Et</button>
+                          <!-- Modal -->
+                          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h5 class="modal-title" id="exampleModalLabel">Hastanıza önerdiğiniz değişiklikleri
+                                    belirtebilirsiniz.</h5>
+                                  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                </div>
+                                <div class="modal-body">
+                                  <p>Önerilerinizi Yazın</p>
+                                  <div class="form-floating">
+                                    <textarea class="form-control"
+                                      placeholder="Justo, elementum varius arcu, massa pellentesque nibh elementum accumsan eros, tincidunt lorem porttitor phasellus interdum"
+                                      id="floatingTextarea2" style="height: 100px"></textarea>
+                                  </div>
+                                </div>
+                                <div class="d-grid gap-2 mb-5 p-3">
+                                  <button type="button" class="btn btn-second" data-bs-dismiss="modal">Değişiklikleri
+                                    Talep Et</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <button class="btn btn-forth">İptal Et</button>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <% }) %>
+              <% }) %>
 
-            <!-- <div class="accordion accordion-flush" id="rezervationMessage2">
+                <!-- <div class="accordion accordion-flush" id="rezervationMessage2">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
@@ -151,12 +180,13 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div class="suggestion-button">
-            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png" alt="Icon Suggestion" />Öneriler</button>
+            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png"
+                alt="Icon Suggestion" />Öneriler</button>
           </div>
         </div>
       </div>
     </div>
   </div>
   <%- include("../../partials/footer") %>
-  <!-- partial -->
+    <!-- partial -->
 </div>
