modified dialysingcom message on gelen kutusu

--- a/src/views/clinic-panel/pages/panel/messages.ejs
+++ b/src/views/clinic-panel/pages/panel/messages.ejs
@@ -6,15 +6,15 @@
         <div class="admin-inner-text">Size özel tekliflerimizi, promosyonlarınızı bu ekrandan görüntüleyebilirsiniz.</div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <form class="tm-form-wide">
-            <div class="form-box">
+            <div class="form-box mb-4">
               <div class="tm-color-primary tm-font-semibold">Dialysing.com</div>
               <div class="tm-color-dark">Atakan Kantarcı tarafından oluşturulan 15 Eylül 2021 Tarihli saat 18:00’da ki randevunuz hastanız tarafından iptal edilmiştir.</div>
             </div>
-            <div class="form-box">
+            <div class="form-box mb-4">
               <div class="tm-color-primary tm-font-semibold">Dialysing.com</div>
               <div class="tm-color-dark">Merkezinize özel %50 indirimli yeni bir promosyon teklifimiz vardır. Promosyon ekranından kontrol edebilirsiniz.</div>
             </div>
-            <div class="form-box">
+            <div class="form-box mb-4">
               <div class="tm-color-primary tm-font-semibold">Dialysing.com</div>
               <div class="tm-color-dark">Ayhan Fırat Fındıkoğlu tarafından 16 Eylül 2021 - 19:00 tarihine Hemodiyaliz tedavisi için randevu oluşturulmuştur.</div>
             </div>
