--- a/public/user/css/panel.css
+++ b/public/user/css/panel.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Khula&family=Lato&family=Montserrat&family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Khula&family=Lato&family=Montserrat&family=Roboto&display=swap');
 .index-company .tm-section-title {
   font-family: "Lato", sans-serif;
   font-size: 20px;
@@ -290,4 +290,12 @@ input#explanation1.form-control {
 .admin-box-text span span {
   font-family: "Lato", sans-serif;
   font-size: 13px;
+}
+.tm-font-semibold {
+  font-family: 'Khula', sans-serif !important;
+  font-size: 18px;
+}
+.tm-color-dark {
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.2rem;
 }
