--- a/src/views/clinic-panel/pages/panel/questions-answered.ejs
+++ b/src/views/clinic-panel/pages/panel/questions-answered.ejs
@@ -2,8 +2,9 @@
   <div class="content-wrapper">
     <div id="section-i" class="tm-p">
       <div class="row">
-        <div class="tm-section-title">Merkezinize Gelen Sorular</div>
-        <div class="admin-inner-text">Soru-Cevap, merkez sayfanızda görüntülenen bir kısımdır. Hastalarınızın merkeziniz ile ilgili sorularından yanıtladıklarınızı burada görebilirsiniz.</div>
+        <div class="tm-section-title">Merkezİnİze Gelen Sorular</div>
+        <div class="admin-inner-text">Soru-Cevap, merkez sayfanızda görüntülenen bir kısımdır. Hastalarınızın merkeziniz
+          ile ilgili sorularından yanıtladıklarınızı burada görebilirsiniz.</div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <form class="tm-form-wide">
             <div class="tm-steps">
@@ -11,63 +12,72 @@
                 <a href="./questions-new.html" class="flex-sm-fill text-sm-center"> Yeni Sorular</a>
               </div>
               <div class="tm-step active">
-                <a href="./questions-answered.html" class="flex-sm-fill text-sm-center"
-                  >Cevaplananlar
+                <a href="./questions-answered.html" class="flex-sm-fill text-sm-center">Cevaplananlar
                   <div class="tm-s-step active"></div>
                 </a>
               </div>
             </div>
-            <div class="form-box questions">
-              <div class="questions-content">
-                <img src="../clinic-panel/images/icons/answer-question.png" alt="Icon Answer" />
+            <div class="d-flex align-items-start">
+              <div class="bg-light text-dark flex-shrink-0 me-2">
+                <img src="../clinic-panel/images/icons/answer-question.png" alt="Icon Answer" /></svg>
               </div>
-              <div class="questions-content">
-                <div class="question">
-                  <div class="tm-color-second tm-font-semibold">Ayhan Fırat Fındıkoğlu</div>
-                  <div class="tm-color-dark tm-margin-1">Diyaliz merkezinizde gece diyalizi hizmeti almak istiyorum fakat, gece ziyaretçi imkanlarınız nelerdir?</div>
-                </div>
+              <div>
+                <div class="tm-color-second tm-font-semibold">Ayhan Fırat Fındıkoğlu</div>
+                <div class="tm-color-dark">Diyaliz merkezinizde gece diyalizi hizmeti almak istiyorum
+                  fakat, gece ziyaretçi imkanlarınız nelerdir?</div>
                 <div class="answer">
-                  <div class="tm-color-shadow-3">Merhabalar, diyaliz merkezimizde gece diyalizi hizmeti sağladığımız zamanlarda ziyaretçilerimizin ve hastalarımızın en konforlu şekilde hizmet almasını ve kendilerini evlerinde hissetmetlerini sağlamaya gayret göstermekteyiz. Ziyaretçiniz ile birlikte kişiye özel odalarımızda sizleri ağırlamaktan şeref duyarız.</div>
+                  <div class="tm-color-shadow-3">Merhabalar, diyaliz merkezimizde gece diyalizi hizmeti sağladığımız
+                    zamanlarda ziyaretçilerimizin ve hastalarımızın en konforlu şekilde hizmet almasını ve kendilerini
+                    evlerinde hissetmetlerini sağlamaya gayret göstermekteyiz. Ziyaretçiniz ile birlikte kişiye özel
+                    odalarımızda sizleri ağırlamaktan şeref duyarız.</div>
                 </div>
               </div>
               <div class="questions-content mt-3">
-                <button class="button-delete">Soruyu Sil<img src="../clinic-panel/images/icons/delete.png" alt="Icon Delete" /></button>
+                <button class="button-delete">Soruyu Sil<img src="../clinic-panel/images/icons/delete.png"
+                    alt="Icon Delete" /></button>
+              </div>
+            </div>
+
+            <hr class="question-hr" />
+            <div class="d-flex align-items-start">
+              <div class="bg-light text-dark flex-shrink-0 me-2">
+                <img src="../clinic-panel/images/icons/answer-question.png" alt="Icon Answer" /></svg>
+              </div>
+              <div>
+                <div class="tm-color-second tm-font-semibold">Ayhan Fırat Fındıkoğlu</div>
+                <div class="tm-color-dark">Diyaliz merkezinizde gece diyalizi hizmeti almak istiyorum
+                  fakat, gece ziyaretçi imkanlarınız nelerdir?</div>
+                <div class="answer">
+                  <div class="tm-color-shadow-3">Merhabalar, diyaliz merkezimizde gece diyalizi hizmeti sağladığımız
+                    zamanlarda ziyaretçilerimizin ve hastalarımızın en konforlu şekilde hizmet almasını ve kendilerini
+                    evlerinde hissetmetlerini sağlamaya gayret göstermekteyiz. Ziyaretçiniz ile birlikte kişiye özel
+                    odalarımızda sizleri ağırlamaktan şeref duyarız.</div>
+                </div>
+              </div>
+              <div class="questions-content mt-3">
+                <button class="button-delete">Soruyu Sil<img src="../clinic-panel/images/icons/delete.png"
+                    alt="Icon Delete" /></button>
               </div>
             </div>
             <hr class="question-hr" />
-            <div class="form-box questions">
-              <div class="questions-content">
-                <img src="../clinic-panel/images/icons/answer-question.png" alt="Icon Answer" />
+            <div class="d-flex align-items-start">
+              <div class="bg-light text-dark flex-shrink-0 me-2">
+                <img src="../clinic-panel/images/icons/answer-question.png" alt="Icon Answer" /></svg>
               </div>
-              <div class="questions-content">
-                <div class="question">
-                  <div class="tm-color-second tm-font-semibold">Ayhan Fırat Fındıkoğlu</div>
-                  <div class="tm-color-dark tm-margin-1">Diyaliz merkezinizde gece diyalizi hizmeti almak istiyorum fakat, gece ziyaretçi imkanlarınız nelerdir?</div>
-                </div>
+              <div>
+                <div class="tm-color-second tm-font-semibold">Ayhan Fırat Fındıkoğlu</div>
+                <div class="tm-color-dark">Diyaliz merkezinizde gece diyalizi hizmeti almak istiyorum
+                  fakat, gece ziyaretçi imkanlarınız nelerdir?</div>
                 <div class="answer">
-                  <div class="tm-color-shadow-3">Merhabalar, diyaliz merkezimizde gece diyalizi hizmeti sağladığımız zamanlarda ziyaretçilerimizin ve hastalarımızın en konforlu şekilde hizmet almasını ve kendilerini evlerinde hissetmetlerini sağlamaya gayret göstermekteyiz. Ziyaretçiniz ile birlikte kişiye özel odalarımızda sizleri ağırlamaktan şeref duyarız.</div>
+                  <div class="tm-color-shadow-3">Merhabalar, diyaliz merkezimizde gece diyalizi hizmeti sağladığımız
+                    zamanlarda ziyaretçilerimizin ve hastalarımızın en konforlu şekilde hizmet almasını ve kendilerini
+                    evlerinde hissetmetlerini sağlamaya gayret göstermekteyiz. Ziyaretçiniz ile birlikte kişiye özel
+                    odalarımızda sizleri ağırlamaktan şeref duyarız.</div>
                 </div>
               </div>
               <div class="questions-content mt-3">
-                <button class="button-delete">Soruyu Sil<img src="../clinic-panel/images/icons/delete.png" alt="Icon Delete" /></button>
-              </div>
-            </div>
-            <hr class="question-hr" />
-            <div class="form-box questions">
-              <div class="questions-content">
-                <img src="../clinic-panel/images/icons/answer-question.png" alt="Icon Answer" />
-              </div>
-              <div class="questions-content">
-                <div class="question">
-                  <div class="tm-color-second tm-font-semibold">Ayhan Fırat Fındıkoğlu</div>
-                  <div class="tm-color-dark tm-margin-1">Diyaliz merkezinizde gece diyalizi hizmeti almak istiyorum fakat, gece ziyaretçi imkanlarınız nelerdir?</div>
-                </div>
-                <div class="answer">
-                  <div class="tm-color-shadow-3">Merhabalar, diyaliz merkezimizde gece diyalizi hizmeti sağladığımız zamanlarda ziyaretçilerimizin ve hastalarımızın en konforlu şekilde hizmet almasını ve kendilerini evlerinde hissetmetlerini sağlamaya gayret göstermekteyiz. Ziyaretçiniz ile birlikte kişiye özel odalarımızda sizleri ağırlamaktan şeref duyarız.</div>
-                </div>
-              </div>
-              <div class="questions-content mt-3">
-                <button class="button-delete">Soruyu Sil<img src="../clinic-panel/images/icons/delete.png" alt="Icon Delete" /></button>
+                <button class="button-delete">Soruyu Sil<img src="../clinic-panel/images/icons/delete.png"
+                    alt="Icon Delete" /></button>
               </div>
             </div>
           </form>
@@ -81,7 +91,8 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div class="suggestion-button">
-            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png" alt="Icon Suggestion" />Öneriler</button>
+            <button type="button" class="btn-second suggestion"><img src="../clinic-panel/images/icons/suggestion.png"
+                alt="Icon Suggestion" />Öneriler</button>
           </div>
         </div>
       </div>
@@ -89,5 +100,5 @@
   </div>
 
   <%- include("../../partials/footer") %>
-  <!-- partial -->
+    <!-- partial -->
 </div>
