--- a/public/user/css/panel.css
+++ b/public/user/css/panel.css
@@ -308,3 +308,25 @@ input#explanation1.form-control {
   font-family: "Lato", sans-serif;
   font-weight: 700;
 }
+.tm-color-shadow-3 {
+  font-size: 13px;
+  line-height: 1.3rem;
+}
+.questions-content .tm-process-text {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+}
+.questions-content .tm-process-pers {
+  font-family: "Lato", sans-serif;
+  font-weight: 600;
+  margin-left: 1rem;
+}
+.questions-content button {
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+}
+.question .tm-color-second span {
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+}
