--- a/src/views/clinic-panel/pages/panel/change-password.ejs
+++ b/src/views/clinic-panel/pages/panel/change-password.ejs
@@ -4,7 +4,7 @@
           <div id="section-i" class="tm-p">
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                <div class="tm-section-title">Şifre Değiştirme</div>
+                <div class="tm-section-title">Şİfre Değİştİrme</div>
                 <form class="tm-form-wide" action="/panel/change-password" method="POST">
                     <div class="form-group password">
                         <label for="old-password">Şifrenizi Giriniz</label>
